--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -90,9 +90,9 @@ header #second-nav a {
   text-decoration: none;
 }
 
-main {
+/* main {
   overflow-x: hidden;
-}
+} */
 
 #home button:nth-child(1){
   width: 100%;
@@ -152,9 +152,60 @@ main {
 
 #item-grid{
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(auto, calc(50% - 0.5em)));
   grid-column-gap: 1em;
+  grid-row-gap: 1em;
   padding: 1em 0.6em;
+  width: 100vw;
+}
+
+#item-grid li{
+  height: min-content;
+  padding-top: 0.2em;
+}
+
+#item-grid li figure{
+  height: 205px;
+  display: flex;
+  justify-content: center;
+}
+
+#item-grid li p{
+  /* width: max-content; */
+}
+
+#item-grid li p:nth-of-type(1){
+  float: left;
+}
+
+#item-grid li p:nth-of-type(2){
+  float: right;
+}
+
+#item-grid li a{
+  cursor: pointer;
+}
+
+#item-grid li a p{
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-bottom: 0.5em;
+}
+
+#item-grid li button{
+  width: 15em;
+  height: 2.5em;
+  border: 0.16em solid;
+  background-color: transparent;
+  border-radius: 1em;
+  display: block;
+  margin: 1.5em auto 0 auto;
+}
+
+#item-grid li figure img{
+  height: 100%;
 }
 
 form {
@@ -392,7 +443,7 @@ a.edit + p {
 
 @media (min-width: 37.70em) { /* 600px/16em */
   #item-grid{
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3,  minmax(auto, calc(33.3333% - 0.66666em)));
   }
 }
 
@@ -427,7 +478,7 @@ form li .error{
     margin-top: 1em;
   }
 
-  #home button:nth-of-type(1){
+  #home button:nth-child(1){
     display: none;
   }
 
@@ -475,7 +526,8 @@ form li .error{
   }
 
   #item-grid{
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, minmax(auto, calc(25% - 0.75em)));
+    padding: 1em 2.5em 1em 1.5em;
   }
 
   select {
