--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -526,7 +526,7 @@ form li .error{
     padding-left: 1em;
   }
 
-  body #home #close-filter button:nth-of-type(1){
+  body #home #filter-toggle button:nth-of-type(1){
     display: block;
   }
 
