--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -195,9 +195,10 @@ header #second-nav a {
 }
 
 #item-grid li button{
-  width: 15em;
+  max-width: 15em;
+  min-width: 90%;
   height: 2.5em;
-  border: 0.16em solid;
+  border: 0.16em solid #000;
   background-color: transparent;
   border-radius: 1em;
   display: block;
@@ -206,8 +207,103 @@ header #second-nav a {
 
 #item-grid li figure img{
   height: 100%;
+  min-width: 50px;
 }
 
+#cart #shopping-cart ul{
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+#cart #shopping-cart ul ul{
+  display: block;
+}
+
+
+#cart #shopping-cart ul li{
+  height: 70px;
+  width: 100%;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(2, minmax(0, max-content)) minmax(0, auto) repeat(3, minmax(0, max-content));
+  flex-direction: row;
+  align-items: center;
+  grid-column-gap: 0.2em;
+  padding: 0.1em;
+}
+
+#cart #shopping-cart ul figure{
+  height: inherit;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  grid-row: span 2;
+}
+
+#cart #shopping-cart ul li p:nth-of-type(1){
+  grid-column: span 2;
+  font-size: 1.4em;
+  font-weight: 600;
+  padding-left: 0.2em;
+}
+
+#cart #shopping-cart ul li p:nth-of-type(2){
+  grid-row: 2;
+  grid-column: 2;
+  font-size: 1.09em;
+}
+
+#cart #shopping-cart ul ul{
+  grid-row: 2;
+  grid-column: 3;
+  display: flex;
+  flex-direction: row;
+  margin-left: 0.9em;
+}
+
+#cart #shopping-cart ul ul li{
+  display: flex;
+  height: max-content;
+}
+
+#cart #shopping-cart ul ul li a{
+  font-size: 0.78em;
+}
+
+#cart #shopping-cart ul li button{/** Remember to change px to em**/
+  font-weight: bold;
+  font-size: 1em;
+  width: 1.2em;
+  background: rgb(121 172 202 / 70%);
+  padding: 0.1em 0.2em;
+  height: 1.2em;
+  text-align: center;
+}
+
+#cart #shopping-cart ul button:nth-of-type(1){
+  grid-column: 4;
+}
+
+#cart #shopping-cart ul li button,
+#cart #shopping-cart ul li input{
+  grid-row: span 2;
+}
+
+
+/* Chrome, Safari, Edge, Opera */
+#cart #shopping-cart input::-webkit-outer-spin-button,
+#cart #shopping-cart input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+#cart #shopping-cart input[type=number] {
+  -moz-appearance: textfield;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+}
 form {
   padding: 0 1em;
   grid-column-start: 2;
@@ -393,6 +489,16 @@ a.edit + p {
   content: "CVV: ";
 }
 
+@media (max-width: 250px) { /* 900px/16 = 56.25em*/
+  #filter fieldset{
+    grid-template-columns: 1fr;
+  }
+
+  #filter fieldset input ~ input{
+    margin-left: 0;
+  }
+}
+
 @media (max-width: 31.25em) { /* 500px/16em */
   main > nav {
     flex-direction: column;
@@ -444,6 +550,7 @@ a.edit + p {
 @media (min-width: 37.70em) { /* 600px/16em */
   #item-grid{
     grid-template-columns: repeat(3,  minmax(auto, calc(33.3333% - 0.66666em)));
+    padding: 1em 0.2em;
   }
 }
 
