Add styles for filter
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>
Co-Authored-By: null <pmithapara@users.noreply.github.com>

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -592,8 +592,12 @@ form li .error{
     margin-top: 1em;
   }
 
-  #home button:nth-child(1){
+  #home #filter{
     display: none;
+  }
+
+  #home #filter.show{
+    display: grid;
   }
 
   #filter {
