Fix styling for filter button
Co-Authored-By: null <pmithapara@users.noreply.github.com>
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -540,6 +540,10 @@ a.edit + p {
     align-self: center;
     justify-content: space-evenly;
   }
+
+  #home button.hide{
+    display: none;
+  }
   .hide ul {
     display: flex;
     flex-direction: column;
