Change height of cart block
Co-Authored-By: null <pmithapara@users.noreply.github.com>
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -451,7 +451,7 @@ body main#cart section {
 
 body main#cart #shopping-cart {
   margin-top: 1em;
-  max-height: 60vh;
+  max-height: 15em;
   padding-bottom: 1.2em;
 }
 
