Add style to remove item on click
Co-Authored-By: null <pmithapara@users.noreply.github.com>
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -245,6 +245,10 @@ header #second-nav a {
   padding: 0.1em;
 }
 
+#cart #shopping-cart ul li.remove{
+  display: none;
+}
+
 #cart #shopping-cart ul figure{
   height: inherit;
   width: 100px;
