Add styling for selected buttons
Co-Authored-By: null <pmithapara@users.noreply.github.com>
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -214,6 +214,10 @@ header #second-nav a {
   margin: 1.5em auto 0 auto;
 }
 
+#item-grid li button.selected{
+  background-color: #FF2929;
+}
+
 #item-grid li figure img{
   height: 100%;
   min-width: 50px;
