Add style for button when quantity is 1
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>
Co-Authored-By: null <pmithapara@users.noreply.github.com>

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -326,6 +326,10 @@ header #second-nav a {
   grid-row: span 2;
 }
 
+#cart #shopping-cart ul li button.onred{
+  background-color: #FF2929;
+}
+
 .translatex {
   left: 0!important;
 }
