--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -281,7 +281,7 @@ header #second-nav a {
   text-overflow: ellipsis;
   padding-bottom: 0.5em;
   color: #56608f;
-    width: 65%;
+  width: 65%;
 }
 
 #cart #shopping-cart ul li p:nth-of-type(2){
@@ -348,6 +348,49 @@ header #second-nav a {
   height: 35px;
   text-align: center;
 }
+
+#cart #order-summary h4{
+  padding-bottom: 0.5em;
+}
+
+#cart #order-summary h5{
+  font-weight: bold;
+  padding-bottom: 0.5em;
+  padding-top: 0.2em;
+}
+
+#cart #order-summary li{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#cart #order-summary li>p{
+  font-size: 0.9em;
+}
+
+#cart #order-summary li.remove{
+  display: none;
+}
+
+#cart #order-summary li>p:first-child{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-bottom: 0.5em;
+  width: 90%;
+}
+
+#cart #order-summary button{
+  width: 100%;
+  height: 2.5em;
+  border: 0.16em solid #81e0c4;
+  background-color: #81e0c4;
+  border-radius: 1em;
+  display: block;
+  margin: 0.5em auto 0 auto
+}
+
 form {
   padding: 0 1em;
   grid-column-start: 2;
