--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -752,6 +752,8 @@ form li .error{
     grid-row-start: 1;
     grid-row: span 3;
     margin-left: 0;
+    /* Mozilla bug */
+    width: -moz-available;
   }
   #cart #shipping-address{
     grid-column: span 4;
@@ -769,18 +771,6 @@ form li .error{
     margin-bottom: 0!important;
     margin-right: 0;
   }
-
-  /* #cart #shipping-address, #cart #payment-info, #cart #billing-address {
-    grid-column: span 4;
-    grid-column-start: 9;
-    grid-column-end: 13;
-    margin-left: 0;
-  }
-
-  #cart #shipping-address {
-    grid-row-start: 1;
-    margin-top: 1em;
-  } */
 
   #home #filter{
     display: none;
