--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -456,36 +456,64 @@ header #second-nav a {
 }
 
 #description_container{
-  height: 100%;
+  padding-top: 1em;
+  max-height: calc(100vh - 2.7777778em);
+  display: flex;
+  flex-direction: row;
 }
 
 #description_container > li{
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(12, 1fr);
-  height: 100%;
+  grid-template-rows: minmax(2em,max-content) minmax(2em,max-content) repeat(7, 1fr);
+  max-height: calc(100vh - 3.7777778em);
   width: 100%;
 }
 
 #description_container li p:nth-of-type(1){
   grid-column: 2 / span 4;
-  grid-row: 1 / span 2;
+  grid-row: 1 / span 1;
+  font-size: 2em;
+  font-weight: 800;
+  line-height: normal;
+  color: #56608f;
+  padding-bottom: 0.8em;
 }
 
 #description_container li p:nth-of-type(2){
   grid-column: 2 / span 3;
-  grid-row: 3/ span 2;
+  grid-row: 2/ span 1;
+  color: #2E4E61;
+  font-size: 1.05em;
+  line-height: 1.2em;
 }
 
 #description_container li p:nth-of-type(3){
   grid-column: 2 / span 2;
-  grid-row: 7/ span 1;
+  grid-row: 4/ span 1;
+  font-size: 1.48em;
+  font-weight: 800;
+  line-height: normal;
+  color: #35B4FF;
   text-align: center;
+}
+
+#description_container li p:nth-of-type(4){
+  grid-column: 10 / span 1;
+  grid-row: 1/ span 1;
+}
+
+#description_container li ul{
+  grid-column: 10 / span 1;
+  grid-row: 2/ span 3;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
 }
 
 #description_container li figure{
   grid-column: 6 / span 3;
-  grid-row: 1/ span 8;
+  grid-row: 1/ span 5;
 }
 
 #description_container li figure{
@@ -493,6 +521,56 @@ header #second-nav a {
   display: flex;
 }
 
+#background{
+  max-width: 100vw;
+  background-color: #fff;
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
+
+#carousel_container{
+  max-width: 40em;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  height: 10em;
+}
+
+#carousel_container ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  height: 100%;
+  gap: 2em;
+  left: 34em;
+}
+
+#carousel_container ul li{
+  max-width: 10em;
+  min-width: max-content;
+  height: 100%;
+}
+
+#carousel_container ul li p{
+  position: absolute;
+  bottom: -5em;
+  transition: all 1s;
+  background-color:  #e4f5ffd6;
+  overflow-wrap: break-word;
+  inline-size: 8em;
+  border-radius: 0.5em;
+}
+
+#carousel_container li figure{
+  height: 100%;
+}
+
+#carousel_container li figure img{
+  max-width: 100%;
+  max-height: 100%;
+}
 
 form {
   padding: 0 1em;
@@ -899,5 +977,8 @@ form li .error{
   li.location:hover {
     padding: 0 0.6em;
     margin: 0;
+  }
+  #carousel_container ul li:hover p{
+    bottom: 0;
   }
 }
