--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -459,7 +459,9 @@ header #second-nav a {
   padding-top: 1em;
   max-height: calc(100vh - 2.7777778em);
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
+  overflow: hidden;
 }
 
 #description_container > li{
@@ -524,7 +526,6 @@ header #second-nav a {
 #background{
   max-width: 100vw;
   background-color: #fff;
-  padding-top: 3em;
   padding-bottom: 3em;
 }
 
@@ -544,7 +545,7 @@ header #second-nav a {
   position: relative;
   height: 100%;
   gap: 2em;
-  left: 34em;
+  left: 121em;
 }
 
 #carousel_container ul li{
