--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -452,23 +452,27 @@ header #second-nav a {
 #descriptions {
   background: linear-gradient(183.79deg, #E4F5FF 51.72%, #ffffff 51.72%);
   display: block;
-  height: calc(100vh - 2.7777778em);
+}
+
+#contain_description {
+  height: 27em;
+  overflow: hidden;
 }
 
 #description_container{
   padding-top: 1em;
-  max-height: calc(100vh - 2.7777778em);
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  overflow: hidden;
+  position: relative;
+  transition: all 1s;
 }
 
 #description_container > li{
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: minmax(2em,max-content) minmax(2em,max-content) repeat(7, 1fr);
-  max-height: calc(100vh - 3.7777778em);
+  height: 27em;
   width: 100%;
 }
 
@@ -526,12 +530,13 @@ header #second-nav a {
 #background{
   max-width: 100vw;
   background-color: #fff;
-  padding-bottom: 3em;
+  padding-bottom: 1em;
 }
 
 #carousel_container{
   max-width: 40em;
-  overflow: hidden;
+  overflow: scroll;
+  overflow-y: hidden;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -545,7 +550,13 @@ header #second-nav a {
   position: relative;
   height: 100%;
   gap: 2em;
-  left: 121em;
+  left: 109em;
+}
+
+.hover{
+  box-shadow: 0px 8px 14px 6px #c0e8ff;
+  bottom: 0.2em;
+  position: relative;
 }
 
 #carousel_container ul li{
@@ -554,9 +565,13 @@ header #second-nav a {
   height: 100%;
 }
 
+#carousel_container ul li:hover{
+  cursor: pointer;
+}
+
 #carousel_container ul li p{
   position: absolute;
-  bottom: -5em;
+  bottom: -6em;
   transition: all 1s;
   background-color:  #e4f5ffd6;
   overflow-wrap: break-word;
