--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -491,9 +491,10 @@ header #second-nav a {
 }
 
 #description_container li p:nth-of-type(2){
-  grid-column: 2 / span 3;
+  grid-column: 2 / span 4;
   grid-row: 2/ span 1;
   color: #2E4E61;
+  padding-right: 1em;
   font-size: 1.05em;
   line-height: 1.2em;
 }
@@ -768,16 +769,6 @@ a.edit + p {
 
 #payment-info p:nth-of-type(4):before {
   content: "CVV: ";
-}
-
-@media (max-width: 250px) { /* 900px/16 = 56.25em*/
-  #filter fieldset{
-    grid-template-columns: 1fr;
-  }
-
-  #filter fieldset input ~ input{
-    margin-left: 0;
-  }
 }
 
 @media (max-width: 31.25em) { /* 500px/16em */
