--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -31,8 +31,8 @@ html {
 /* Webkit supported browsers */
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 5px;
+  width: 0.625em;
+  height: 0.3125em;
 }
 
 /* Track */
@@ -49,7 +49,7 @@ html {
 /* End of scrollbar design */
 
 input[type="checkbox"] {
-  border: 1px solid #ccc;
+  border: 0.0625em solid #ccc;
 }
 
 button {
@@ -195,12 +195,12 @@ header #second-nav a {
   height: min-content;
   padding-top: 0.2em;
   padding: 1em;
-  box-shadow: 0px 8px 14px 6px #c0e8ff;
+  box-shadow: 0 0.5em 0.875em 0.375em #c0e8ff;
   border-radius: 0.45em;
 }
 
 #item-grid li figure{
-  height: 205px;
+  height: 10.45em;
   display: flex;
   justify-content: center;
 }
@@ -257,7 +257,7 @@ header #second-nav a {
 
 #item-grid li figure img{
   height: 100%;
-  min-width: 50px;
+  min-width: 2.5em;
 }
 
 #cart #shopping-cart ul{
@@ -275,7 +275,7 @@ header #second-nav a {
 
 
 #cart #shopping-cart ul li{
-  height: 70px;
+  height: 4.375em;
   width: 100%;
   display: grid;
   grid-template-rows: 1fr 1fr;
@@ -292,7 +292,7 @@ header #second-nav a {
 
 #cart #shopping-cart ul figure{
   height: inherit;
-  width: 100px;
+  width: 6.25em;
   display: flex;
   justify-content: center;
   grid-row: span 2;
@@ -376,8 +376,8 @@ header #second-nav a {
 /* Firefox */
 #cart #shopping-cart input[type=number] {
   -moz-appearance: textfield;
-  width: 35px;
-  height: 35px;
+  width: 2.5em;
+  height: 2.5em;
   text-align: center;
   border: 0;
   border-color: transparent;
@@ -565,7 +565,7 @@ header #second-nav a {
 }
 
 .hover{
-  box-shadow: 0px 8px 14px 6px #c0e8ff;
+  box-shadow: 0 0.5em 0.875em 0.375em #c0e8ff;
   bottom: 0.2em;
   position: relative;
 }
