Fix bug for menu button
Co-Authored-By: Priyank Mithapara <pmithapara@hawk.iit.edu>

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -85,8 +85,11 @@ header {
   padding: 0.5em 1em 0 1em;
 }
 
-.hide {
+#item-grid .hide{
   display: none!important;
+}
+.hide {
+  display: none;
 }
 
 .hiden{
