Fix typogrphy error
Co-Authored-By: @Juno-Explorer1 <Juno-Explorer1@users.noreply.github.com>

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -728,7 +728,7 @@ body main#cart #shopping-cart {
 }
 
 body main#cart #order-summary {
-  grid-row-start: 1/1;
+  grid-row: 1/1;
   margin-top: 1em;
 }
 
