--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -85,6 +85,9 @@ header {
   padding: 0.5em 1em 0 1em;
 }
 
+#item-grid .hide{
+  display: none!important;
+}
 .hide {
   display: none!important;
 }
@@ -720,9 +723,13 @@ body main#cart section {
 }
 
 body main#cart #shopping-cart {
-  margin-top: 1em;
   max-height: 15em;
   padding-bottom: 1.2em;
+}
+
+body main#cart #order-summary {
+  grid-row: 1/1;
+  margin-top: 1em;
 }
 
 body main#cart #billing-address {
@@ -904,9 +911,9 @@ form li .error{
     margin-right: 0;
   }
   #cart #order-summary{
+    margin-top: 0!important;
     grid-column: span 4;
-    grid-row-start: 1;
-    grid-row: span 3;
+    grid-row: 1/ span 3!important;
     margin-left: 0;
     /* Mozilla bug */
     width: -moz-available;
